--- a/MyPartyApp/Base.lproj/Main.storyboard
+++ b/MyPartyApp/Base.lproj/Main.storyboard
@@ -108,20 +108,20 @@
                                 <color key="textColor" red="1" green="0.28105655312538147" blue="0.32174134254455566" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IjA-9D-07n">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oMC-mL-6YJ">
                                 <rect key="frame" x="21" y="187.5" width="333" height="33.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" red="1" green="0.2810565531" blue="0.32174134250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oMC-mL-6YJ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IjA-9D-07n">
                                 <rect key="frame" x="21" y="291" width="333" height="33.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" red="1" green="0.2810565531" blue="0.32174134250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4MN-ZE-qcK">
-                                <rect key="frame" x="41" y="339.5" width="293" height="30"/>
+                                <rect key="frame" x="41" y="236" width="293" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -130,22 +130,13 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Choose Date and Time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rfq-rw-ihW">
-                                <rect key="frame" x="41" y="236" width="293" height="30"/>
-                                <accessibility key="accessibilityConfiguration" hint="name "/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="startDatePicker:" destination="mg1-lo-2gp" eventType="editingDidBegin" id="gcy-R6-r8t"/>
-                                </connections>
-                            </textField>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MUL-Zn-Y9A">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="New Party" id="9sO-qj-Nra">
                                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="vFT-FS-QVm">
                                             <connections>
-                                                <action selector="cancel:" destination="mg1-lo-2gp" id="d3R-gz-SaW"/>
+                                                <action selector="cancel:" destination="mg1-lo-2gp" id="btR-0T-7Ja"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="V3h-C7-ywD">
@@ -156,26 +147,42 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="YGa-yg-U1B">
+                                <rect key="frame" x="0.0" y="401" width="375" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <date key="date" timeIntervalSinceReferenceDate="503195227.20661998">
+                                    <!--2016-12-12 00:27:07 +0000-->
+                                </date>
+                                <connections>
+                                    <action selector="datePickerValueChanged:" destination="mg1-lo-2gp" eventType="valueChanged" id="Uv6-pB-1Vl"/>
+                                </connections>
+                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJT-Ic-M4M">
+                                <rect key="frame" x="41" y="339.5" width="293" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="eJT-Ic-M4M" firstAttribute="top" secondItem="IjA-9D-07n" secondAttribute="bottom" constant="15" id="1Rn-7W-Bt4"/>
+                            <constraint firstItem="oMC-mL-6YJ" firstAttribute="top" secondItem="4T5-ct-eQJ" secondAttribute="bottom" constant="25" id="2LL-RI-2Ua"/>
                             <constraint firstItem="IjA-9D-07n" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="2gh-Wa-Bks"/>
                             <constraint firstItem="4MN-ZE-qcK" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="25" id="2qe-Fh-43T"/>
-                            <constraint firstItem="Rfq-rw-ihW" firstAttribute="top" secondItem="IjA-9D-07n" secondAttribute="bottom" constant="15" id="3mK-8j-7Uc"/>
-                            <constraint firstItem="IjA-9D-07n" firstAttribute="top" secondItem="4T5-ct-eQJ" secondAttribute="bottom" constant="25" id="6yW-C1-tUt"/>
                             <constraint firstItem="QFm-4v-iMM" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leading" constant="18" id="Co4-q5-eoI"/>
                             <constraint firstItem="oMC-mL-6YJ" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="Io6-4U-xvD"/>
                             <constraint firstItem="4T5-ct-eQJ" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="JHt-ez-0SD"/>
+                            <constraint firstItem="4MN-ZE-qcK" firstAttribute="top" secondItem="oMC-mL-6YJ" secondAttribute="bottom" constant="15" id="KP1-rL-mCE"/>
                             <constraint firstItem="IjA-9D-07n" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="5" id="NpK-wS-Kce"/>
-                            <constraint firstItem="Rfq-rw-ihW" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="25" id="TRI-Bf-KuC"/>
+                            <constraint firstItem="eJT-Ic-M4M" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="25" id="OCR-5Z-79q"/>
+                            <constraint firstItem="eJT-Ic-M4M" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="RGk-jb-Eqp"/>
                             <constraint firstItem="MUL-Zn-Y9A" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leading" id="V5o-UI-J7h"/>
-                            <constraint firstItem="Rfq-rw-ihW" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="XA5-JK-K3e"/>
                             <constraint firstAttribute="trailing" secondItem="MUL-Zn-Y9A" secondAttribute="trailing" id="aS6-qn-Pj7"/>
-                            <constraint firstItem="oMC-mL-6YJ" firstAttribute="top" secondItem="Rfq-rw-ihW" secondAttribute="bottom" constant="25" id="csq-2w-0bW"/>
+                            <constraint firstItem="IjA-9D-07n" firstAttribute="top" secondItem="4MN-ZE-qcK" secondAttribute="bottom" constant="25" id="baV-i6-1qK"/>
                             <constraint firstItem="oMC-mL-6YJ" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="5" id="f58-RX-8di"/>
                             <constraint firstItem="QFm-4v-iMM" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="fd8-AK-tyv"/>
                             <constraint firstItem="QFm-4v-iMM" firstAttribute="top" secondItem="MUL-Zn-Y9A" secondAttribute="bottom" constant="20" id="gOx-ja-vpw"/>
-                            <constraint firstItem="4MN-ZE-qcK" firstAttribute="top" secondItem="oMC-mL-6YJ" secondAttribute="bottom" constant="15" id="hbc-Xp-KEX"/>
                             <constraint firstItem="4MN-ZE-qcK" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="k5j-gq-IFv"/>
                             <constraint firstItem="4T5-ct-eQJ" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="25" id="o45-FB-EkG"/>
                             <constraint firstItem="MUL-Zn-Y9A" firstAttribute="top" secondItem="nbj-rP-K83" secondAttribute="bottom" id="pnM-iJ-FgG"/>
@@ -193,9 +200,11 @@
                     </navigationItem>
                     <connections>
                         <outlet property="addressTextField" destination="4MN-ZE-qcK" id="K8a-h0-9Gz"/>
+                        <outlet property="cancelButton" destination="vFT-FS-QVm" id="7Jh-E7-ss4"/>
+                        <outlet property="datePicker" destination="YGa-yg-U1B" id="1qM-O0-osD"/>
                         <outlet property="nameTextField" destination="4T5-ct-eQJ" id="wmf-DA-0ph"/>
                         <outlet property="saveButton" destination="V3h-C7-ywD" id="m6S-Mw-4Zi"/>
-                        <outlet property="startDateTextField" destination="Rfq-rw-ihW" id="X3U-dF-k1r"/>
+                        <outlet property="startDateLabelView" destination="eJT-Ic-M4M" id="eV9-cE-P9k"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j6q-bt-oiQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
